<resources>
    <string name="app_name">Plantz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_username">Username</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">LogIn</string>
    <string name="signup_phrase">Create account</string>
    <string name="menu_home_button">Home</string>
    <string name="menu_favourite_button">Favourite</string>
    <string name="menu_addPlant_button">Add</string>
    <string name="menu_profile_button">Profile</string>
    <string name="fragment_home">Fragment home</string>
    <string name="fragment_notification">Fragment notification</string>
    <string name="fragment_profile">Fragment profile</string>
    <string name="sign_out">Sign out</string>
    <string name="sifi_name">Scientific Name : </string>
    <string name="family">Family : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
