<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="217dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login_icon_foreground" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:hintTextColor="@color/textOutline"
        android:hint="@string/email"
        android:textColorHint="@color/textOutline"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/textOutline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:outlineSpotShadowColor="@color/textOutline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lgn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textOutline"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:hintTextColor="@color/textOutline"
        android:hint="@string/password"
        android:textColorHint="@color/textOutline"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/textOutline"
        android:outlineSpotShadowColor="@color/textOutline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/textOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lgn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/textOutline"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/lgnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/textOutline"
        android:text="@string/login_button"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gotoSignUp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/signup_phrase"
        app:layout_constraintTop_toBottomOf="@id/lgnBtn" />



</androidx.constraintlayout.widget.ConstraintLayout>