<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fr_signup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="textPersonName"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:met_floatingLabel="normal"
            android:hint="Username" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgn_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:met_floatingLabel="normal"
            android:hint="@string/email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgn_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:met_floatingLabel="normal"
            android:hint="@string/password" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgn_cpassword"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:met_floatingLabel="normal"
            android:hint="@string/confirm_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:text="Sign Up"
            android:background="@drawable/rounded_button"
            android:textColor="@color/textOutline"
            android:backgroundTint="@color/colorBackground"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Back to  "
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/createAccount"
                android:textColor="@color/colorPrimaryGray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" SignIn"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:id="@+id/gotoSignIn"
                android:textColor="@color/colorBackground"/>

        </LinearLayout>





    </LinearLayout>



</RelativeLayout>